feat: define /alerts/firing/classification API
